﻿v0.0.1:
- Added Verblassen
- Added The Table Mount
- Added Normal texture for Diolite ore
- Diolite ore now drops right item
- Added Meteor Belt biome

v0.0.0.7:
- Added Galactite Stone
- Added Diolite Ore
- Added Potion of Compassion
- Fixed CRITICAL unnamed bug (When WoF been killed nothing happened)
- Added Meteor generator (required enable INDEV generation)
- Added Suspicious Looking Flower
- Added Experemental Heart
- Added Zarnitsa
- New logo


v0.0.0.6:
- Added "Vibraxe"
- Added Diolite Ingot
- Added option to enable INDEV generation (NOT RECOMENDED!)
- Updated texture for "Neko Slime"
- Added "Compassion" debuff

v0.0.0.5:
- Added "Neko Slime" (spawning in laboratory biome)
- Tested laboratory island generation

v0.0.0.4:
- Added "Laboratory Block" (and block item)
- Added "Laboratory" biome
- Added "Laboratory" rarity

v0.0.0.3:
- Changed recipe of "Soul of Mechanism"
- Added secret wings
- Changed texture of "Soul of Mechanism"

v0.0.0.2:
- Added Ocean Rider

v0.0.0.1:
- Added Magneturn Ingot
- Added Soul of Mechanism
- Added New "Water Walking Boots" recipe